--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <service
             android:name=".EMIService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="false" />
 
         <activity android:name=".MainActivity">
             <intent-filter>
